gs_file_get_path_cached: Unlock mutex on error

https://bugzilla.gnome.org/show_bug.cgi?id=708824